--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-# ??????????? ??
+## ??????????? ??
 spring.h2.console.enabled=true
 # ?????????? ??????????? ????????? ???????? ??
 spring.datasource.generate-unique-name=false
 # ????????? ???????? ?? ??? ???????
 spring.datasource.name=content
+
+# ?????????? ?? postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=password
