--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.generate-unique-name=false
 # ????????? ???????? ?? ??? ???????
 spring.datasource.name=content
 
+logging.level.org.springframework.jdbc=DEBUG
+
 # ?????????? ?? postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
