--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,10 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+		<!--		Общение с бд-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jdbc</artifactId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 
 <!--		<dependency>-->
@@ -37,6 +38,7 @@
 <!--			<artifactId>postgresql</artifactId>-->
 <!--			<scope>runtime</scope>-->
 <!--		</dependency>-->
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
