Создал несколько метаданных. Также создал контроллер для вывода этих данных и конструктор, для создания данных

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-# ??????????? ??
+# Connecting to the database
 spring.h2.console.enabled=true
-# ?????????? ??????????? ????????? ???????? ??
+# Disabling the standard generation of a unique database name
 spring.datasource.generate-unique-name=false
-# ????????? ???????? ?? ??? ???????
+# Creating a custom name for the database
 spring.datasource.name=content
 
 logging.level.org.springframework.jdbc=DEBUG
 
-# ?????????? ?? postgres
+# connecting to postgres
 #spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 #spring.datasource.username=postgres
 #spring.datasource.password=password
+
+# installing a custom port for the spring application
+#server.port=8085
+
+# Setting the message that is output via the controller
+cc.welcome-message=Welcome to my content calendar!
+cc.about=My name is Hiss. I`m java backend developer!
+cc.about-my-calendar=This is my content calendar
