добавил зависимость для отслеживания метрик. Выставил конечные точки для отслеживания процессов приложения

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 			<optional>true</optional>
 		</dependency>
 
+<!--		Зависимости для продакшена-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 <!--		<dependency>-->
 <!--			<groupId>org.postgresql</groupId>-->
 <!--			<artifactId>postgresql</artifactId>-->
