--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ logging.level.org.springframework.jdbc=DEBUG
 cc.welcome-message=Welcome to my content calendar!
 cc.about=My name is Hiss. I`m java backend developer!
 cc.about-my-calendar=This is my content calendar
+
+#????????? ????????? ???????
+spring.profiles.active=Hiss,dev
+
+management.endpoint.web.exposure.include=*
+
+management.endpoint.health.show-details=always
