Добавил файл json с некоторыми данными. Добавил в DataLoader загрузку данных из json и сохранение на сервер

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@ cc.welcome-message=Welcome to my content calendar!
 cc.about=My name is Hiss. I`m java backend developer!
 cc.about-my-calendar=This is my content calendar
 
-#????????? ????????? ???????
+# Setting the active profile
 spring.profiles.active=Hiss,dev
 
+# Setting endpoints for tracking application metrics
 management.endpoint.web.exposure.include=*
-
 management.endpoint.health.show-details=always
