--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 # Connecting to the database
-spring.h2.console.enabled=true
-# Disabling the standard generation of a unique database name
-spring.datasource.generate-unique-name=false
-# Creating a custom name for the database
-spring.datasource.name=content
+#spring.h2.console.enabled=true
+## Disabling the standard generation of a unique database name
+#spring.datasource.generate-unique-name=false
+## Creating a custom name for the database
+#spring.datasource.name=content
 
-logging.level.org.springframework.jdbc=DEBUG
+#logging.level.org.springframework.jdbc=DEBUG
 
 # connecting to postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=password
+
+# Permanent enter sql code
+spring.sql.init.mode=always
 
 # installing a custom port for the spring application
 #server.port=8085
